header changed to application for counting

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 </head>
 <body>
 
-    <h1>Counter App</h1>
-    <h1>v</h1>
+    <h1>Application for counting</h1>
     <div id="counter">0</div>
 
     <button onclick="increment()">Increment</button>
