--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <h1>Application for counting</h1>
     <div id="counter">0</div>
+    <h1>Counter App</h1>
 
     <button onclick="increment()">Increment</button>
     <button onclick="decrement()">Decrement</button>
