dev2 para included

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <h1>Application for counting</h1>
     <div id="counter">0</div>
+    <p>This application will be used for counting purpose</p>
 
     <button onclick="increment()">Increment</button>
     <button onclick="decrement()">Decrement</button>
